--- a/uis/pkginfo.ui
+++ b/uis/pkginfo.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Package Information</string>
   </property>
   <widget class="QPushButton" name="prevButton">
    <property name="geometry">
@@ -61,7 +61,7 @@
   <widget class="QComboBox" name="sectionCB">
    <property name="geometry">
     <rect>
-     <x>160</x>
+     <x>192</x>
      <y>16</y>
      <width>337</width>
      <height>32</height>
@@ -79,6 +79,149 @@
    </property>
    <property name="text">
     <string>Section:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>64</y>
+     <width>84</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Priority:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="priorityCB">
+   <property name="geometry">
+    <rect>
+     <x>192</x>
+     <y>64</y>
+     <width>337</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>standard</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>required</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>important</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>optional</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>extra</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLineEdit" name="shortDescEdit">
+   <property name="geometry">
+    <rect>
+     <x>192</x>
+     <y>112</y>
+     <width>433</width>
+     <height>32</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="dependList">
+   <property name="geometry">
+    <rect>
+     <x>192</x>
+     <y>272</y>
+     <width>256</width>
+     <height>193</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="longDescEdit">
+   <property name="geometry">
+    <rect>
+     <x>192</x>
+     <y>160</y>
+     <width>433</width>
+     <height>97</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>112</y>
+     <width>177</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Short Description:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>160</y>
+     <width>161</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Long Description:</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>272</y>
+     <width>145</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Dependencies:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>336</y>
+     <width>97</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_2">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>384</y>
+     <width>97</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Remove</string>
    </property>
   </widget>
  </widget>
