--- a/uis/ignore.ui
+++ b/uis/ignore.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Ignore Patterns</string>
   </property>
   <widget class="QPushButton" name="removeButton">
    <property name="geometry">
