--- a/uis/adddep.ui
+++ b/uis/adddep.ui
@@ -38,6 +38,9 @@
      <height>32</height>
     </rect>
    </property>
+   <property name="focusPolicy">
+    <enum>Qt::StrongFocus</enum>
+   </property>
   </widget>
   <widget class="QLabel" name="label">
    <property name="geometry">
