--- a/uis/generate.ui
+++ b/uis/generate.ui
@@ -16,10 +16,10 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>16</y>
+     <x>16</x>
+     <y>0</y>
      <width>369</width>
-     <height>97</height>
+     <height>65</height>
     </rect>
    </property>
    <property name="text">
@@ -32,14 +32,69 @@
   <widget class="QPushButton" name="generateButton">
    <property name="geometry">
     <rect>
-     <x>224</x>
-     <y>192</y>
+     <x>400</x>
+     <y>16</y>
      <width>193</width>
-     <height>97</height>
+     <height>49</height>
     </rect>
    </property>
    <property name="text">
     <string>Generate</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="outputEdit">
+   <property name="geometry">
+    <rect>
+     <x>16</x>
+     <y>96</y>
+     <width>609</width>
+     <height>321</height>
+    </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="nextButton">
+   <property name="geometry">
+    <rect>
+     <x>512</x>
+     <y>432</y>
+     <width>119</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Next</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="cancelButton">
+   <property name="geometry">
+    <rect>
+     <x>384</x>
+     <y>432</y>
+     <width>119</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Close</string>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>32</x>
+     <y>64</y>
+     <width>84</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Output</string>
    </property>
   </widget>
  </widget>
