--- a/uis/existing.ui
+++ b/uis/existing.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Upgrade Package</string>
   </property>
   <widget class="QPushButton" name="nextButton">
    <property name="geometry">
