--- a/uis/main.ui
+++ b/uis/main.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Build Output</string>
   </property>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
